# my-first-tensorflow

./: CMakeLists.txt  README.md  my-first-detector.cpp  my-first-tensorflow.cpp
